# fitcc_ml

./: .gitignore  LICENSE  docker-compose.yml  env  get_top.sh  scraper_history.json  test-link.ps1  test.ps1  test.sh
backend/BuyGuardian.Api/: .dockerignore  BuyGuardian.Api.csproj  BuyGuardian.Api.sln  Dockerfile  Program.cs  README.md  appsettings.json  docker-compose.yml
buyguardian-ui/: README.md  angular.json  package.json  tsconfig.app.json
buyguardian-ui/public/: manifest.webmanifest
buyguardian-ui/src/: background.ts  content.ts  index.html  (+2 more)
catboost_info/: catboost_training.json  learn_error.tsv  time_left.tsv
ml_service/: Dockerfile  README.md  check_db.py  pyproject.toml
ml_service/app/: __init__.py  config.py  db.py  main.py  scheduler.py
ml_service/app/features/: engineering.py
ml_service/app/models/: isolation_forest.py
ml_service/app/routes/: anomaly.py
ml_service/domain/: rules.py
ml_service/features/: transformers.py
ml_service/inference/: pipeline.py  predictor.py
ml_service/training/: dataset.py  label_generator.py
ml_service_listing/: .env.example  Dockerfile  README.md  __init__.py  metrics  requirements.txt
ollama_storage/: id_ed25519  id_ed25519.pub
scraper_engine/: Dockerfile  deduplicate.py  docker-compose.yml  dump_state.py  investigate_category.py  investigate_listing.py  pyproject.toml  scratch_test_multi.py  scratch_test_parser.py  test_url.py  test_verify.py
scraper_engine/scraper/: __init__.py  engine.py  enrich_queue.py  main.py  models.py  parser.py  publisher.py  stealth.py  store.py  worker.py
scraper_engine/scraper/llm/: __init__.py  config.py  enricher.py  json_utils.py  openai_compat.py  ports.py  template_loader.py  validator.py
scraper_engine/scraper/llm_templates/general/: output_schema.json  output_template.json  prompt.txt
scraper_engine/scraper/llm_templates/phones/: output_schema.json  output_template.json  prompt.txt
(+80 files in other folders)
