[project]
name = "buyguardian-scraper"
version = "0.1.0"
description = "High-performance OLX.ba scraper engine for the BuyGuardian Trust Score extension"
requires-python = ">=3.10"
dependencies = [
    "playwright>=1.40.0",
    "playwright-stealth>=1.0.6",
    "pydantic>=2.5.0",
    "openai>=1.40.0",
    "jsonschema>=4.23.0",
    "pika>=1.3.2",
    "redis>=5.0.0",
    "httpx>=0.27.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project.optional-dependencies]
dev = [
    "ruff>=0.1.0",
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.0",
]
